Changes activity to ballPickingActivity
